初始化xm-agent